--- a/digibank/src/assets/styles/components/_post.scss
+++ b/digibank/src/assets/styles/components/_post.scss
@@ -238,7 +238,6 @@ section.post-infos {
           justify-content: space-between;
           width: 100%;
           height: 100%;
-    
           .store-item {
             display: flex;
             justify-content: center;
@@ -249,14 +248,12 @@ section.post-infos {
             animation: fadeMe 0.3s;
             margin-bottom: 2rem;
     
-            &.slim {
-              width: 18%;
-            }
-    
             img {
               object-fit: contain;
               width: 100%;
               max-height: 100%;
+              border-radius: 10px;
+              object-fit: cover;
             }
           }
         }
