--- a/digibank/src/assets/styles/components/_cardComponent.scss
+++ b/digibank/src/assets/styles/components/_cardComponent.scss
@@ -68,7 +68,7 @@
 
   width: 48%;
   max-height: max-content;
-  padding: 20px;
+  padding: 1.25rem;
 
   border: 2px solid $hover-background;
   border-radius: $button-radius;
