fix: pequenos bugs na aplicação

--- a/digibank/src/assets/styles/_cadastro.scss
+++ b/digibank/src/assets/styles/_cadastro.scss
@@ -92,6 +92,11 @@ $third-color: #000;
           display: flex;
           gap: 2rem;
           width: 100%;
+
+          input{
+            color: #000 !important;
+            width: 100%;
+          }
         }
       }
     }
