--- a/digibank/src/assets/styles/components/_post.scss
+++ b/digibank/src/assets/styles/components/_post.scss
@@ -229,6 +229,7 @@ section.post-infos {
     gap: 65px;
 
     .galeria-post {
+      margin-top: 80px;
       .support-galeria-post {
         display: flex;
         gap: 50px;
