--- a/digibank/src/assets/styles/_digiStore.scss
+++ b/digibank/src/assets/styles/_digiStore.scss
@@ -106,6 +106,7 @@ main#digistore {
     // gap: 22px;
     width: 100%;
     // height: 340px;
+    height: 100%;
     margin: 35px 0;
 
     .box-top-support {
@@ -224,6 +225,6 @@ main#digistore {
   border: none;
   background-color: transparent;
 }
-.MuiFormLabel-root{
+.MuiFormLabel-root {
   color: #000;
 }
