--- a/digibank/src/assets/styles/main.scss
+++ b/digibank/src/assets/styles/main.scss
@@ -23,9 +23,11 @@
 @import './components/empty';
 @import './components/post';
 @import './components/carousel';
+@import './components/post';
 @import './components/modalComentar';
 @import './components/modalEfetuarTransacao';
 @import './components/recomendadosPost';
+@import './components/avaliacoesComponent';
 
 
 
