feat: adiociona preview em cadastro e funcionalidade de listar mais itens, style: arruma estilizacoes gerais

--- a/digibank/src/assets/styles/components/_modalEfetuarTransacao.scss
+++ b/digibank/src/assets/styles/components/_modalEfetuarTransacao.scss
@@ -15,7 +15,7 @@
     img {
       height: 100%;
       max-width: 130px;
-      object-fit: cover;
+      object-fit: scale-down;
       border-radius: $button-radius;
     }
 
