--- a/digibank/src/assets/styles/components/_post.scss
+++ b/digibank/src/assets/styles/components/_post.scss
@@ -250,9 +250,8 @@ section.post-infos {
             margin-bottom: 2rem;
     
             img {
-              object-fit: contain;
               width: 100%;
-              max-height: 100%;
+              height: 100%;
               border-radius: 10px;
               object-fit: cover;
             }
@@ -344,7 +343,9 @@ section.post-infos {
 
     .descricao-post-cad {
       display: flex;
+      justify-content: space-between;
       align-items: end;
+      height: 45vh;
       p {
         font-size: 1.18rem;
         max-width: 720px;
@@ -352,6 +353,8 @@ section.post-infos {
       .textBox {
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
         textarea {
           resize: none;
           border: 3px $hover-background solid;
