--- a/digibank/src/assets/styles/components/_recomendadosPost.scss
+++ b/digibank/src/assets/styles/components/_recomendadosPost.scss
@@ -33,7 +33,7 @@
         }
 
         img {
-          width: auto;
+          width: 100% ;
           height: 240px;
           object-fit: scale-down;
           border-radius: inherit;
