--- a/digibank/src/assets/styles/components/_post.scss
+++ b/digibank/src/assets/styles/components/_post.scss
@@ -1,4 +1,4 @@
-@import "../base";
+@import '../base';
 
 #separador {
   opacity: 0.7;
@@ -144,11 +144,11 @@ main#post {
           }
         }
       }
-      .optionVendas{
-        p{
+      .optionVendas {
+        p {
           font-size: 1.2rem;
 
-          span{
+          span {
             font-weight: 600;
           }
         }
@@ -249,7 +249,7 @@ section.post-infos {
             border-radius: $button-radius;
             animation: fadeMe 0.3s;
             margin-bottom: 2rem;
-    
+
             img {
               width: 100%;
               height: 100%;
@@ -328,6 +328,10 @@ section.post-infos {
               width: 100%;
               height: 100%;
               border-radius: inherit;
+
+              &:hover {
+                opacity: 0.3;
+              }
             }
           }
         }
@@ -346,7 +350,6 @@ section.post-infos {
       display: flex;
       justify-content: space-between;
       align-items: end;
-      height: 45vh;
       p {
         font-size: 1.18rem;
         max-width: 720px;
@@ -355,7 +358,7 @@ section.post-infos {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        height: 100%;
+        height: 45vh;
         textarea {
           resize: none;
           border: 3px $hover-background solid;
@@ -384,8 +387,6 @@ section.post-infos {
         // flex-wrap: wrap;
         width: 100%;
         align-items: flex-start;
-
-
       }
     }
   }
@@ -464,6 +465,36 @@ input {
 
         font-size: 1.5rem;
         font-weight: 500;
+      }
+    }
+  }
+}
+
+.support-modal-preview {
+  display: flex;
+  flex-direction: column;
+  padding: 16px;
+  gap: 16px;
+  
+  .preview-post {
+    display: flex;
+    justify-content: space-between;
+    gap: 16px;
+    
+    .color-options {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+
+      .color-option {
+        border: 2px solid $hover-background;
+        width: 45px;
+        aspect-ratio: 1/1;
+
+        &:hover{
+          box-shadow: 0 2px 6px 0px $hover-background;
+          transform: scale(1.05);
+        }
       }
     }
   }
