--- a/digibank/src/assets/styles/_digiStore.scss
+++ b/digibank/src/assets/styles/_digiStore.scss
@@ -131,7 +131,9 @@ main#digistore {
 
     .suport-carousel {
       display: flex;
-      justify-content: space-between;
+      // justify-content: space-between;
+      flex-wrap: wrap;
+      gap: 5.3333%;
       width: 100%;
       height: 100%;
 
