--- a/digibank/src/assets/styles/components/_recomendadosPost.scss
+++ b/digibank/src/assets/styles/components/_recomendadosPost.scss
@@ -15,7 +15,8 @@
         flex-direction: column;
         justify-content: space-between;
         // margin: 2.5%;
-        width: 24%;
+        width: 21%;
+        // gap: 1%;
         max-width: 330px;
         // height: 100%;
         // min-height: 288px;
