feat: add, asideInvest e carouselInvest

--- a/digibank/src/assets/styles/main.scss
+++ b/digibank/src/assets/styles/main.scss
@@ -10,6 +10,7 @@
 @import 'landing';
 @import 'minhaArea';
 @import 'digiStore';
+@import 'diginvest';
 @import 'inventario';
 @import 'catalogo';
 @import './components/sideBar';
