feat: indicesCache, optionPage, DependencyInjection

--- a/digibank/src/assets/styles/main.scss
+++ b/digibank/src/assets/styles/main.scss
@@ -14,7 +14,9 @@
 @import 'inventario';
 @import 'catalogo';
 @import 'investidos';
+@import 'diginvestPost';
 @import './components/sideBar';
+@import './components/linearRating';
 @import './components/userInfosComponent';
 @import './components/cardComponent';
 @import './components/header&footer';
