--- a/digibank/src/assets/styles/components/_recomendadosPost.scss
+++ b/digibank/src/assets/styles/components/_recomendadosPost.scss
@@ -15,6 +15,9 @@
         flex-direction: column;
         justify-content: space-between;
         // margin: 2.5%;
+        &.diginvest{
+          width: 29%;
+        }
         width: 21%;
         // gap: 1%;
         max-width: 330px;
