feat: add Sacar, Depositar e Calcular Ganhos em modal

--- a/digibank/src/assets/styles/main.scss
+++ b/digibank/src/assets/styles/main.scss
@@ -14,6 +14,7 @@
 @import 'inventario';
 @import 'catalogo';
 @import 'investidos';
+@import 'poupanca';
 @import './components/sideBar';
 @import './components/userInfosComponent';
 @import './components/cardComponent';
@@ -31,6 +32,7 @@
 @import './components/recommendedBlocks';
 @import './components/recomendadosPost';
 @import './components/avaliacoesComponent';
+@import './components/modalSacar';
 
 
 
