--- a/digibank/src/assets/styles/components/_carousel.scss
+++ b/digibank/src/assets/styles/components/_carousel.scss
@@ -18,6 +18,10 @@
         gap: 5.333%;
         align-items: center;
 
+        &#diginvest{
+            gap: 3.5% !important;
+        }
+
         .btnCarousel {
             background-color: #f9f9f9;
             // opacity: 50%;
