--- a/digibank/src/assets/styles/main.scss
+++ b/digibank/src/assets/styles/main.scss
@@ -15,6 +15,7 @@
 @import 'catalogo';
 @import 'investidos';
 @import 'diginvestPost';
+@import 'carteira';
 @import './components/sideBar';
 @import './components/linearRating';
 @import './components/userInfosComponent';
@@ -33,6 +34,7 @@
 @import './components/recommendedBlocks';
 @import './components/recomendadosPost';
 @import './components/avaliacoesComponent';
+@import './components/infoBlock';
 
 
 
