fix: arruma endpoints nao utilizadas e altera listagem de investimentos

--- a/digibank/src/assets/styles/_extrato.scss
+++ b/digibank/src/assets/styles/_extrato.scss
@@ -47,6 +47,7 @@
             .data-valor{
                 display: flex;
                 justify-content: flex-start;
+                align-items: center;
                 width: 32rem;
                 gap: 2rem;
             }
