--- a/digibank/src/assets/styles/_investidos.scss
+++ b/digibank/src/assets/styles/_investidos.scss
@@ -24,6 +24,7 @@ main#investidos{
         .paginacaoInvestidos {
             display: flex;
             align-items: center;
+            padding-left: 4rem;
             margin-top: 1rem;
         }
     }
