--- a/digibank/src/assets/styles/_diginvest.scss
+++ b/digibank/src/assets/styles/_diginvest.scss
@@ -48,7 +48,8 @@ main#diginvest{
 
         .boxCarousel{
             display: flex;
-            flex-direction: column;
+            flex-wrap: wrap;
+            // flex-direction: column;
             gap: 2rem;
             width: 100%;
 
