--- a/digibank/src/assets/styles/_investidos.scss
+++ b/digibank/src/assets/styles/_investidos.scss
@@ -17,6 +17,7 @@ main#investidos{
 
         .boxCarousel{
             display: flex;
+            flex-wrap: wrap;
             gap: 2rem;
             width: 100%;
 
