--- a/digibank/src/assets/styles/components/_modalComentar.scss
+++ b/digibank/src/assets/styles/components/_modalComentar.scss
@@ -35,3 +35,15 @@
     width: 100%;
   }
 }
+
+.btnAtualizarModal{
+  background-color: transparent;
+  height: 100%;
+  width: 100%;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  color: black;
+  font-weight: 400;
+
+}
