--- a/digibank/src/assets/styles/main.scss
+++ b/digibank/src/assets/styles/main.scss
@@ -18,6 +18,7 @@
 @import 'poupanca';
 @import 'diginvestPost';
 @import 'carteira';
+@import 'carteiaGraphs';
 @import './components/sideBar';
 @import './components/linearRating';
 @import './components/userInfosComponent';
