--- a/digibank/src/assets/styles/_digiStore.scss
+++ b/digibank/src/assets/styles/_digiStore.scss
@@ -78,23 +78,35 @@ main#digistore {
         display: flex;
         align-items: center;
         height: 100%;
-        gap: 38px;
+        gap: 1rem;
       }
 
       .store-search-suport {
         display: flex;
         align-items: center;
-        max-width: 100%;
-        width: 40rem;
+        width: 48rem;
+        max-width: 70%;
         height: 100%;
-        gap: 4rem;
+        gap: 1rem;
 
-        .btnCadastrarStore {
-          display: flex;
-          align-items: center;
-          @extend .btnComponent;
-          &:hover {
-            background-color: $hover-background !important;
+        #cadastrar_btn {
+
+          .btnComentar {
+            height: 100%;
+            color: $primary-color;
+            font-size: 1.1rem;
+            font-weight: 500;
+            background-color: transparent;
+            border: 3px solid $hover-background;
+            border-radius: $button-radius;
+            text-decoration: none;
+            padding: 0.75rem 1rem;
+
+            &:hover {
+              border: 3px solid $primary-color;
+              color: $text-dark-color;
+              background-color: $primary-color;
+            }
           }
         }
       }
@@ -136,7 +148,6 @@ main#digistore {
       gap: 5.3333%;
       width: 100%;
       height: 100%;
-
 
       .store-item {
         display: flex;
@@ -192,25 +203,34 @@ main#digistore {
       display: flex;
       justify-content: left;
       gap: 1rem;
-      width: 70%;
+      width: 100%;
 
-      img {
-        height: 4rem;
-        width: 5rem;
-        border-radius: 5px;
-        object-fit: scale-down;
+      .support-img {
+        width: 12rem;
+        max-width: 40%;
+        height: 7rem;
+
+        img {
+          width: 100%;
+          height: 100%;
+          border-radius: 5px;
+          object-fit: scale-down;
+        }
       }
+
       .labelSearch {
         font-size: 1.2rem;
         text-decoration: none;
         color: #000;
         text-align: start;
       }
-    }
-    .labelSearch {
-      font-size: 1.2rem;
-      color: #000;
-      text-align: end;
+
+      .labelSearch:last-child {
+        font-size: 1.2rem;
+        margin-left: auto;
+        color: #000;
+        text-align: end;
+      }
     }
   }
 }
