--- a/digibank/src/assets/styles/components/_post.scss
+++ b/digibank/src/assets/styles/components/_post.scss
@@ -248,7 +248,7 @@ main#post {
 }
 
 //Alternative Sections Post
-section.post-infos {
+section.post-infos { 
   h2 {
     font-size: 2.5rem;
     font-weight: 400;
@@ -261,9 +261,12 @@ section.post-infos {
     gap: 65px;
 
     .galeria-post {
+      width: 100%;
       margin-top: 80px;
+  
       .support-galeria-post {
         display: flex;
+        width: 100%;
         gap: 50px;
 
         .suport-carousel-galeria {
@@ -281,6 +284,7 @@ section.post-infos {
             border-radius: $button-radius;
             animation: fadeMe 0.3s;
             margin-bottom: 2rem;
+            gap: 0.333%;
 
             img {
               width: 100%;
@@ -294,14 +298,14 @@ section.post-infos {
         .support-img {
           // max-width: 320px;
           // max-height: 180px;
-          width: 320px;
-          height: 180px;
+          width: 32.5%;
+          height: 18rem;
           border-radius: $button-radius;
 
           .boxCadastro {
             display: flex;
-            width: 20rem;
-            height: 11.25rem;
+            width: 100%;
+            height: 100%;
             background-color: $hover-background;
             border-radius: $button-radius;
             cursor: pointer;
@@ -347,23 +351,25 @@ section.post-infos {
         div {
           display: flex;
           flex-wrap: wrap;
-          gap: 50px;
+          width: 100%;
+          gap: 1.25%;
 
           .support-img {
-            // max-width: 320px;
-            // max-height: 180px;
-            width: 320px;
-            height: 180px;
             border-radius: $button-radius;
 
             img {
               width: 100%;
               height: 100%;
               border-radius: inherit;
+              object-fit: cover;
 
               &:hover {
                 opacity: 0.3;
               }
+            }
+
+            .boxCadastro{
+
             }
           }
         }
@@ -440,12 +446,12 @@ input {
   flex-direction: column;
   padding: 16px;
   gap: 16px;
-  
+
   .preview-post {
     display: flex;
     justify-content: space-between;
     gap: 16px;
-    
+
     .color-options {
       display: flex;
       flex-direction: column;
@@ -456,7 +462,7 @@ input {
         width: 45px;
         aspect-ratio: 1/1;
 
-        &:hover{
+        &:hover {
           box-shadow: 0 2px 6px 0px $hover-background;
           transform: scale(1.05);
         }
