feat: adiciona modal de imagens da galeria e qntCotas/valorTotal aos investidos

--- a/digibank/src/assets/styles/components/_post.scss
+++ b/digibank/src/assets/styles/components/_post.scss
@@ -1,4 +1,4 @@
-@import '../base';
+@import "../base";
 
 #separador {
   opacity: 0.7;
@@ -282,11 +282,17 @@ section.post-infos {
             animation: fadeMe 0.3s;
             margin-bottom: 2rem;
 
-            img {
-              width: 100%;
+            .imgBtn {
+              background-color: transparent;
+              border: none;
               height: 100%;
-              border-radius: 10px;
-              object-fit: cover;
+              width: 100%;
+              img {
+                width: 100%;
+                height: 100%;
+                border-radius: 10px;
+                object-fit: cover;
+              }
             }
           }
         }
@@ -440,12 +446,12 @@ input {
   flex-direction: column;
   padding: 16px;
   gap: 16px;
-  
+
   .preview-post {
     display: flex;
     justify-content: space-between;
     gap: 16px;
-    
+
     .color-options {
       display: flex;
       flex-direction: column;
@@ -456,7 +462,7 @@ input {
         width: 45px;
         aspect-ratio: 1/1;
 
-        &:hover{
+        &:hover {
           box-shadow: 0 2px 6px 0px $hover-background;
           transform: scale(1.05);
         }
