--- a/digibank/src/assets/styles/_diginvest.scss
+++ b/digibank/src/assets/styles/_diginvest.scss
@@ -39,6 +39,7 @@ main#diginvest{
     margin-top: 4rem;
     margin-bottom: 4rem;
     height: 100%;
+    min-height: calc(100vh - $heightHeaderNFooter);
     
     .containerCarousels{
         display: flex;
