feat: ajusta paginacao em investplace

--- a/digibank/src/assets/styles/_base.scss
+++ b/digibank/src/assets/styles/_base.scss
@@ -60,6 +60,15 @@ h1 {
   @extend .centralizado;
   width: 80%;
 }
+.caracteres-limite{
+  align-self: flex-end;
+  font-size: 1rem;
+  color: #00000070;
+
+  &.limite{
+    color: $secondary-color;
+  }
+}
 
 .btnComponent {
   @extend .flex;
