--- a/digibank/src/assets/styles/components/_modalComentar.scss
+++ b/digibank/src/assets/styles/components/_modalComentar.scss
@@ -33,6 +33,14 @@
     align-items: center;
     gap: 50px;
     width: 100%;
+
+    .input-form{
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: 100%;
+      gap: 2rem;
+    }
   }
 }
 
