--- a/digibank/src/assets/styles/components/_recomendadosPost.scss
+++ b/digibank/src/assets/styles/components/_recomendadosPost.scss
@@ -44,6 +44,7 @@
     background-color: transparent;
     box-shadow: 0 2px 6px 0px $hover-background;
     transform: scale(1.008);
+    transition: all 300ms linear;
   }
 
   &.support-post-big {
@@ -65,8 +66,8 @@
       top: 9.5rem;
       left: 0;
       padding: 1rem;
-
-      h3, h4, h5, span {
+      transition: all 1s linear;
+      h3, h4, h5, .nota-recomendado {
         color: #fff;
       }
     }
