--- a/digibank/src/assets/styles/_diginvestFavoritos.scss
+++ b/digibank/src/assets/styles/_diginvestFavoritos.scss
@@ -1,23 +1,36 @@
-@import 'base';
+// @import 'base';
 
-main#investFavoritos {
-  display: flex;
+// main#investFavoritos {
 
-  margin-top: 4rem;
-  margin-bottom: 4rem;
-  height: 100%;
+//   .containerCarousels {
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: space-between;
+//     gap: 4rem;
+//     width: 100%;
 
-  .containerCarousels {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 4rem;
-    width: 100%;
-    min-height: 74vh;
+//     .topMainCarousel{
+//       display: flex;
+//       justify-content: space-between;
+//       width: 100%;
+//     }
 
-    .boxCarousel {
-      width: 100%;
-    }
-  }
-}
+//     .boxCarousel {
+//       width: 100%;
+//       div{
+//         display: flex;
+//         width: 100%;
+//         // height: 100%;
+        
+//         .boxScrollInfinito {
+//           height: 100% !important;
+//           display: flex;
+//           flex-wrap: wrap;
+//           overflow: unset !important;
+//           gap: 2rem 3.5%;
+//         }
+//       }
+//     }
+//   }
+// }
 
