--- a/digibank/src/assets/styles/components/_modalVenderCotas.scss
+++ b/digibank/src/assets/styles/components/_modalVenderCotas.scss
@@ -80,7 +80,7 @@ button#btnVendaCota {
             display: flex;
             flex-direction: column;
             gap: 1rem;
-            height: 100%;
+            height: 250px;
             width: 100%;
 
             span{
